--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welber Soluções TI</title>
     <link rel="stylesheet" href="assets/css/site.css">
-    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon" />
 
 </head>
 <body>
