--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="assets/img/logo.png" width="100%" title="Welber Soluções TI">
+            <img src="assets/img/logo.svg" width="100%" title="Welber Soluções TI">
             <p>Em breve...</p>
         </div>
     </div>
